2009-03-05  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* setup.hh (class Setup): Hide internal API as privat.

	* music/connector.hh, music/runtime.hh, music/setup.hh,
	music/spatial.hh, music/subconnector.hh, music/temporal.hh,
	connector.cc, port.cc, runtime.cc, setup.cc, spatial.cc,
	subconnector.cc, synchronizer.cc, temporal.cc: Begin to reorganize
	connectors so that functionality for setup and not needed during
	runtime is moved to the new class Connection.

	* music/connection.hh, connection.cc: New files.

	* Makefile.am: Updated.

	* music/temporal.hh, temporal.cc (ConnectionEdge): Renamed from
	"Connection".

2009-03-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0

2009-02-27  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* ChangeLog, Makefile.am, music/FIBO.hh, music/array_data.hh,
	music/clock.hh, music/connector.hh, music/data_map.hh,
	music/event.hh, music/interval.hh, music/port.hh,
	music/runtime.hh, music/spatial.hh, music/subconnector.hh,
	music/synchronizer.hh, music/temporal.hh, FIBO.cc, array_data.cc,
	clock.cc, connector.cc, port.cc, runtime.cc, spatial.cc,
	subconnector.cc, synchronizer.cc, temporal.cc: Continous data port
	framework.

	* music/BIFO.hh, music/collector.hh, music/distributor.hh,
	music/sampler.hh, BIFO.cc, collector.cc, distributor.cc,
	sampler.cc: New files.
	
2009-02-16  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am (libmusic_la_SOURCES): Added distributor.cc,
	music/distributor.cc, collector.cc, music/collector.hh.

	* music/spatial.hh, spatial.cc: Added destructor which destroys
	indices.

	* setup.cc, runtime.cc: Pass connectors even if not launched using
	the music utility.

2009-02-11  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music-c.h, music-c-c.c, music-c.cc (MUSIC_setupCommunicator):
	Declare properly and don't use MPI_Intracomm.

2009-02-09  Mikael Djurfeldt  <mdj@lampetra.csc.kth.se>

	* music/subconnector.hh,
	subconnector.cc (InputSubconnector::flushed): Bugfix: Initialize.
