@@ -1,6 +1,17 @@
+2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* port.cc (Port::assertOutput, Port::assertInput, Port::hasWidth,
+	Port::width): Supply port name in error messages.
+
+	* connectivity.cc (Connectivity::add): Pass port name to
+	ConnectivityInfo constructor.
+
+	* music/connectivity.hh (ConnectivityInfo): Added portName (to be
+	used for more comprehensible error messages).
+
 2009-03-05  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
-	* setup.hh (class Setup): Hide internal API as privat.
+	* setup.hh (class Setup): Hide internal API as private.
 
 	* music/connector.hh, music/runtime.hh, music/setup.hh,
 	music/spatial.hh, music/subconnector.hh, music/temporal.hh,
